[package]
name = "chlog-rs"
version = "0.1.0"
authors = ["Rafael Ferreira <rafaelsf@gmail.com>"]
repository = "https://github.com/rafasf/chlog-rs.git"
homepage = "https://github.com/rafasf/chlog-rs"
license = "MIT"
readme = "README.md"
description = "Help people to create changelog for projects"
keywords = ["git", "changelog", "story-summary"]

[dependencies]
regex = "0.2.3"
chrono = "0.4"
clap = "2.29.0"
ansi_term = "0.10.2"
reqwest = "0.8.2"
serde_json = "1.0"
serde = "1.0.27"
serde_derive = "1.0"
lazy_static = "1.1.0"
env_proxy = "0.2"
log = "0.4"
simplelog = "^0.5.0"

[[bin]]
name = "chlog"
path = "src/main.rs"

